# catlass

examples/: CMakeLists.txt
examples/74_ascend950_weight_quant_a8w4_grouped_mx_matmul/: CMakeLists.txt  README.md  gen_data.py  weight_quant_a8w4_grouped_mx_matmul.cpp
examples/75_symm/: CMakeLists.txt  README.md  symm.cpp
examples/common/: golden.hpp
examples/common/golden/: fill_data.hpp  matrix_inverse.hpp
include/catlass/detail/: tag_to_layout.hpp
include/catlass/gemm/: dispatch_policy.hpp
include/catlass/gemm/block/: block_mmad.hpp  block_mmad_mx_a8w4.hpp  block_mmad_pingpong_symm_left_tla.hpp  block_mmad_pingpong_symm_right_tla.hpp  block_mmad_planar_complex_fused_tla.hpp  block_mx_a8w4_prologue.hpp
include/catlass/gemm/kernel/: a8w4_mx_matmul.hpp  symm_tla.hpp  weight_quant_a8w4_grouped_mx_matmul.hpp
include/catlass/gemm/tile/: tile_copy.hpp
include/catlass/layout/: matrix.hpp
include/tla/: layout.hpp
python/tla_dsl/catlass/tla/: tensor.py
python/tla_dsl/csrc/mlir/include/Dialect/Tla/IR/: Tla.td
python/tla_dsl/csrc/mlir/lib/Dialect/Tla/IR/: TlaOps.cpp
python/tla_dsl/csrc/mlir/lib/Passes/: TlaCubeRegionPass.cpp  TlaVectorRegionPass.cpp
python/tla_dsl/examples/end_to_end/basic_vadd/: basic_vadd.py
python/tla_dsl/tests/: test_bitwise_ops.py  test_generated_ops_surface.py  test_load_unalign_op.py  test_store_unalign_op.py
python/tla_dsl/tests/lit/tla-compile/: vector-load-diagnostics.test  vector-store-diagnostics.test
tests/: test_example.py
tests/optest/: README.md
tests/optest/include/: catlass_kernel_jit.h
tests/optest/kernels/: CMakeLists.txt
tests/optest/kernels/74_ascend950_weight_quant_a8w4_grouped_mx_matmul/: CMakeLists.txt  weight_quant_a8w4_grouped_mx_matmul.cpp  weight_quant_a8w4_grouped_mx_matmul_impl.cpp
tests/optest/kernels/75_symm/: CMakeLists.txt  symm.cpp  symm_impl.cpp
tests/optest/src/: catlass_torch.cpp
tests/optest/src/include/template/: a8w4_grouped_mx_matmul.h  symm.h
tests/optest/tests/: a8w4_golden.py  test_74_ascend950_weight_quant_a8w4_grouped_mx_matmul.py  test_75_symm.py
tests/optest/torch_catlass/: __init__.py
tests/optest/torch_catlass/ops/: __init__.py  ascend950_a8w4_grouped_mx_matmul.py  symm.py
